WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284514
ASSERTION FAILED: regs.contains(reg) in JSC::B3::Air::Code::pinRegister(JSC::Reg)
https://bugs.webkit.org/show_bug.cgi?id=284514
Summary
ASSERTION FAILED: regs.contains(reg) in JSC::B3::Air::Code::pinRegister(JSC::...
Fujii Hironori
Reported
2024-12-11 22:58:13 PST
ASSERTION FAILED: regs.contains(reg) in JSC::B3::Air::Code::pinRegister(JSC::Reg) History:
https://results.webkit.org/?suite=javascriptcore-tests&test=testair&style=debug
ASSERTION FAILED: regs.contains(reg) ./b3/air/AirCode.cpp(164) : void JSC::B3::Air::Code::pinRegister(JSC::Reg) 1 0x115742300 JSC::B3::Air::Code::pinRegister(JSC::Reg) 2 0x1003e98dc (anonymous namespace)::testRotateFringeClobber() 3 0x1003e8b24 (anonymous namespace)::run(char const*)::$_28::operator()() const 4 0x1003e8ab8 WTF::SharedTaskFunctor<void (), (anonymous namespace)::run(char const*)::$_28>::run() 5 0x10044adf8 (anonymous namespace)::run(char const*)::$_67::operator()() const 6 0x10044acb4 WTF::Detail::CallableWrapper<(anonymous namespace)::run(char const*)::$_67, void>::call() 7 0x114afa768 WTF::Function<void ()>::operator()() const 8 0x114c3c1b8 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 9 0x114c4887c WTF::wtfThreadEntryPoint(void*) 10 0x19a5ebfa8 _pthread_start 11 0x19a5e6da0 thread_start testair completed with rc=5 (254)
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-12-11 23:01:54 PST
287137@main
: last good
287147@main
: first bad
https://github.com/WebKit/WebKit/compare/c077ba3cb140797d981cd48e3c37f4e55e9efcaf...842d24a827ff7ba2e3ecdcbe6665b0a826d5c4e6
287139@main
seems to be the culprit.
Justin Michaud
Comment 2
2024-12-12 13:48:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37856
EWS
Comment 3
2024-12-12 16:26:02 PST
Committed
287771@main
(fa906c0740fd): <
https://commits.webkit.org/287771@main
> Reviewed commits have been landed. Closing PR #37856 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-12-12 16:27:14 PST
<
rdar://problem/141402841
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug