ASSERTION FAILED: regs.contains(reg) in JSC::B3::Air::Code::pinRegister(JSC::Reg) https://bugs.webkit.org/show_bug.cgi?id=284514

Reviewed by Yusuke Suzuki.

We just needed to skip a few extra registers on other platforms.

* Source/JavaScriptCore/b3/air/testair.cpp:

Canonical link: https://commits.webkit.org/287771@main